# CPPStaticBooster

./: CMakeCommandsParser.cpp  CMakeCommandsParser.hpp  CMakeLists.txt  CharInfo.cpp  CharInfo.hpp  CoreAPI.cpp  CoreAPI.hpp  FileReaderInterace.hpp  Includes.hpp  Lexer.cpp  Lexer.hpp  README.md  SyntaxTreeBuilder.cpp  SyntaxTreeBuilder.hpp  SystemInterface.hpp  Utilities.hpp  conanfile.txt  main.cpp
.github/workflows/: c-cpp.yml  cmake.yml
tests/: CMakeCommandsParserTest.cpp  CMakeLists.txt  LexerTest.cpp  SyntaxTreeBuilderTest.cpp  UtilitiesTest.cpp
